samples/_failures_safe/1761172884_f870cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6972810d.c: In function ‘main’:
./samples/SAFE/__tmp_6972810d.c:144:23: error: expected ‘;’ at end of input
  144 |                 strcpy
      |                       ^
      |                       ;
./samples/SAFE/__tmp_6972810d.c:144:17: error: expected declaration or statement at end of input
  144 |                 strcpy
      |                 ^~~~~~
./samples/SAFE/__tmp_6972810d.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6972810d.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6972810d.c:144:17: error: expected declaration or statement at end of input
